# AIStarEcosystem

./: .gitignore  .gitmodules  .npmrc  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  PRODUCT.md  README.md  RUN-DAP-VERIFY.command  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  product.md  product_spec.md  product_spec_ai_celebrity.md
.claude/: launch.json  settings.local.json
.github/workflows/: deploy-production.yml
.impeccable/celebrity/: design.json
.impeccable/critique/: 2026-05-14T08-36-56Z__apps-web-music.md  ignore.md
apps/: .gitignore  AI IP Design Directions.html  design.md
apps/admin/: .env.example  DESIGN.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/admin-new/: next.config.mjs  package.json
apps/admin_codex/: package-lock.json  package.json
apps/admin_new/: next.config.mjs  package-lock.json  package.json
apps/llm-gateway/: README.md  pom.xml
apps/miniprogram/: README.md  agent.md  app.js  app.json  app.wxss  project.config.json
apps/sau-service/: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  REAL_MODE.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
apps/sau-service/scripts/: debug_xhs_corner.py  smoke_drivers.py
apps/sau-service/src/sau_service/: __init__.py  auth.py  browser_runtime.py  callback.py  config.py  interaction.py  login_pool.py  main.py  qr.py  uploader.py  upstream_conf.py
apps/sau-service/src/sau_service/routes/: accounts.py  login.py  upload.py
apps/sau-service/tests/: test_smoke.py
apps/server/: .gitignore  README.md  dev.sh  mvnw  mvnw.cmd  pom.xml
docs/: ADMIN_ALIGNMENT_AUDIT.md  ADMIN_PRODUCT_SPEC.md  AIAVATAR_PROGRESS.md  FACE_BEAUTY_RESEARCH.md  INDEX.md  MATERIAL_OPS_AI_TEXT_PLAN.md  VERSION_HISTORY.md
infra/: MIGRATION.md  README.md
scripts/: check-api-contract.mjs  dap-dev.sh  dap-e2e.py  dap-verify.sh  dev-fake-agnes-server.mjs  dev-fake-llm-server.mjs  dev-fake-multimodal-server.mjs
specs/: BACKEND_API_SPEC.md  BUSINESS_RULES.md  PRODUCT_SPEC_CN.md  README.md  openapi.yaml  unified-account-entitlement-platform.md
src/: AGENCY_MODULE_IMPROVEMENTS.md  AI_INCUBATOR_IMPLEMENTATION.md  ARCHITECTURE_REFACTOR.md  App.tsx  BACKEND_API_SPEC.md  DELIVERY_SUMMARY.md  DISTRIBUTION_PAGE_OPTIMIZATION_GUIDE.md  FINAL_OPTIMIZATION_REPORT.md  INCUBATOR_INTEGRATION_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_ROADMAP.md  PRODUCT_SPEC.md  PRODUCT_SPEC_CN.md  QUICK_START_GUIDE.md  TESTING_GUIDE.md  THEME_SYSTEM.md  temp_audio_player_insertion.txt  temp_overview_replacement.txt
(+2810 files in other folders)
