[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sau-service"
version = "0.1.0"
description = "AI Star Eco sau-service — Playwright wrapper for social media auto-upload (sau integration)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Star Eco team" }]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
# Real Playwright mode — pulled in by docker image when SAU_MOCK_MODE=0.
# Mirrors the upstream pokocat/social-auto-upload pyproject (patchright is
# its hardened Playwright fork; the rest are the upstream's runtime needs).
real = [
    "patchright==1.58.2",
    "loguru==0.7.3",
    "opencv-python>=4.13.0",
    "qrcode==8.2",
    "requests==2.32.3",
    "segno>=1.6.6",
    # The upstream library itself, pinned by commit SHA. Switch SHA when
    # you re-base the patch branch.
    "social-auto-upload @ git+https://github.com/pokocat/social-auto-upload@721476f7b49c2c8c4625ea9b053745b89138d5d8",
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
]

[project.scripts]
sau-service = "sau_service.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
